refactor: switch engine to WebFlux, integrate Reactor Kafka and add Swagger schemas